<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/edit_box"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25sp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10sp"
    android:elevation="1sp"
    android:background="@color/colorPrimaryLight">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/darkGreenishGrey2"
            android:text="@string/egg_balance"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/eggBalanceCount"
            android:textColor="@color/darkGreenishGrey2"
            android:text="0 crates"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/darkGreenishGrey2"
            android:text="@string/today"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/todayEggCount"
            android:textColor="@color/darkGreenishGrey2"
            android:text="0 crates"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/darkGreenishGrey2"
            android:text="@string/yestday"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/ysdayEggCount"
            android:textColor="@color/darkGreenishGrey2"
            android:text="0 crates"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:padding="5sp"
            android:layout_gravity="center"
            android:id="@+id/specDay"
            android:textStyle="bold"
            android:textColor="@color/darkGreenishGrey"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10sp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="@drawable/info_bg"
            android:id="@+id/specDayCount"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:padding="20sp"
        android:orientation="vertical"
        android:layout_weight="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:padding="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="10sp"
            android:text="@string/sel_date"
            android:id="@+id/select_date_btn"
            android:background="@drawable/new_poultry"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="15sp"
            android:layout_marginBottom="25sp"
            android:textColor="@color/white"
            android:id="@+id/select_daterange_btn"
            android:text="@string/sel_date_range"
            android:background="@drawable/new_poultry"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="15sp"
            android:textColor="@color/white"
            android:id="@+id/selectSellEgg"
            android:text="@string/sell_egg"
            android:background="@drawable/green_btn"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_new_egg"
        android:src="@drawable/add_egg"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20sp"/>
</RelativeLayout>