<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/edit_box"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100sp"
    android:layout_marginTop="10sp"
    android:layout_marginRight="10sp"
    android:layout_marginLeft="10sp"
    android:padding="10sp"
    android:orientation="horizontal"
    android:background="@drawable/info_bg">
    <LinearLayout
        android:layout_width="75sp"
        android:layout_height="70sp"
        android:id="@+id/gotoBirds"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="15sp"
            android:textSize="14sp"
            android:layout_marginBottom="5sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="Poultry"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/home_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:text="Name"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Active"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/darkGreen"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sold"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/blue"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dead"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/red"/>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/poultry_list_view"
            android:divider="@color/colorPrimaryLight"
            android:dividerHeight="1sp">

        </ListView>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:padding="10sp"
        android:id="@+id/gotoEggs"
        android:orientation="horizontal"
        android:background="@drawable/info_bg">
        <LinearLayout
            android:layout_width="75sp"
            android:layout_height="70sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15sp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="5sp"
                android:text="@string/eggs"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/egg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13sp"
                    android:textColor="@color/darkGreenishGrey2"
                    android:text="@string/today"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/today_egg_home"
                    android:text="0/0"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/darkGreenishGrey"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13sp"
                    android:textColor="@color/darkGreenishGrey2"
                    android:text="@string/yestday"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0/0"
                    android:id="@+id/yesterday_egg_home"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/darkGreenishGrey"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13sp"
                    android:textColor="@color/darkGreenishGrey2"
                    android:text="Egg Balance"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0 Crates"
                    android:id="@+id/eggbalance_home"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/darkGreenishGrey"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:padding="10sp"
        android:id="@+id/gotoFinance"
        android:orientation="horizontal"
        android:background="@drawable/info_bg">
        <LinearLayout
            android:layout_width="75sp"
            android:layout_height="80sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15sp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="5sp"
                android:text="@string/finance"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:background="@drawable/finance_logo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textSize="13sp"
                    android:textColor="@color/darkGreenishGrey2"
                    android:text="Today"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:id="@+id/today_credit"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/darkGreen2"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:id="@+id/today_debit"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textSize="13sp"
                    android:textColor="@color/darkGreenishGrey2"
                    android:text="This Week"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:id="@+id/thisweek_credit"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/darkGreen2"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:id="@+id/thisweek_debit"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textSize="13sp"
                    android:textColor="@color/darkGreenishGrey2"
                    android:text="This Month"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:id="@+id/thismonth_credit"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/darkGreen2"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:id="@+id/thismonth_debit"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13sp"
                    android:textColor="@color/darkGreenishGrey2"
                    android:text="Total Bal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="N0"
                    android:id="@+id/total_bal_finance"
                    android:textStyle="bold|italic"
                    android:textSize="14dp"
                    android:textColor="@color/darkGreen2"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="30sp"
        android:background="@drawable/notif_bg"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15sp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@color/transparent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_notifications_white_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Feed Info"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"/>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/notifList"
            android:divider="@color/darkblue"
            android:dividerHeight="1.5sp"/>
    </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:tint="@color/colorPrimaryLight"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/add_feed"/>
    </RelativeLayout>
</LinearLayout>